<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_films">

    <fragment
        android:id="@+id/navigation_films"
        android:name="com.geekbrains.december.ui.films.FilmsFragment"
        android:label="@string/title_films"
        tools:layout="@layout/fragment_films" />

    <fragment
        android:id="@+id/navigation_serials"
        android:name="com.geekbrains.december.ui.serials.SerialsFragment"
        android:label="@string/title_serials"
        tools:layout="@layout/fragment_serials" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.geekbrains.december.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>