<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_container_cardview_movie"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMovie"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:hapticFeedbackEnabled="false"
            app:cardBackgroundColor="@android:color/holo_blue_bright"
            app:cardCornerRadius="7dp">

            <TextView
                android:id="@+id/list_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="75dp"
                android:text="@string/id" />

            <ImageView
                android:id="@+id/item_poster"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/movie_title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="54dp"
                android:text="@string/default_popularity" />

            <TextView
                android:id="@+id/list_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="75dp"
                android:text="@string/release_date" />

            <TextView
                android:id="@+id/list_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="34dp"
                android:text="@string/slogan" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>