<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMovie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:hapticFeedbackEnabled="false"
        app:cardBackgroundColor="@android:color/holo_blue_bright"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_poster"
                android:layout_width="105dp"
                android:layout_height="99dp"
                android:layout_gravity="top"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="7dp" />

            <TextView
                android:id="@+id/list_title"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/movie_title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/item_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_tx_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/info_tx_year"
                app:layout_constraintStart_toEndOf="@+id/item_poster"
                app:layout_constraintTop_toTopOf="@+id/list_release_date" />

            <TextView
                android:id="@+id/list_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                app:layout_constraintStart_toEndOf="@+id/info_tx_year"
                app:layout_constraintTop_toBottomOf="@+id/list_tmdb" />

            <TextView
                android:id="@+id/info_tx_raiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/info_tx_raiting"
                app:layout_constraintBottom_toTopOf="@+id/info_tx_year"
                app:layout_constraintStart_toEndOf="@+id/item_poster"
                app:layout_constraintTop_toBottomOf="@+id/list_title" />

            <TextView
                android:id="@+id/list_tmdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/default_popularity"
                android:textColor="#455A64"
                app:layout_constraintStart_toEndOf="@+id/info_tx_raiting"
                app:layout_constraintTop_toBottomOf="@+id/list_title" />

            <TextView
                android:id="@+id/list_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/list_tmdb" />

            <TextView
                android:id="@+id/listbudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_slogan" />

            <TextView
                android:id="@+id/list_slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:text="@string/slogan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_poster" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px"
                android:elevation="8dp"
                android:visibility="visible"
                app:cardCornerRadius="7dp"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/list_slogan"
                app:layout_constraintVertical_bias="0.397">

                <TextView
                    android:id="@+id/list_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FDF9F9"
                    android:justificationMode="inter_word"
                    android:text="@string/move_about"
                    android:textColor="@color/black" />


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/filmsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="list_slogan,list_description,list_id,item_poster,list_title,list_tmdb,list_release_date"
        tools:ignore="NotSibling" />


</androidx.constraintlayout.widget.ConstraintLayout>