<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_films_fragment"
    tools:context=".ui.films.FilmsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hapticFeedbackEnabled="false"
        app:cardCornerRadius="10dp"
        android:divider="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewFilms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:queryBackground="@color/white"
            app:queryHint="Поиск фильма..." />

    </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFilms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:onClick="btnTest"
        android:text="BTN_TEST"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMovie"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hapticFeedbackEnabled="false"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewFilms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:id="@+id/list_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="75dp"
            android:text="@string/id" />

        <ImageView
            android:id="@+id/item_poster_path"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center|start"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/movie_title"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/default_popularity" />

        <TextView
            android:id="@+id/list_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="75dp"
            android:text="@string/release_date" />

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/filmsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        app:constraint_referenced_ids="list_id,item_poster_path,list_title,list_popularity,list_release_date"
        tools:ignore="NotSibling" />


</androidx.constraintlayout.widget.ConstraintLayout>